--- a/Test Rosenbrock 50-10.ipynb
+++ b/Test Rosenbrock 50-10.ipynb
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "dea5cd27-82b8-433f-bdc2-e539e78cfa36",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,19 @@
       "Epoch 110, Validation Loss: 21.52\n",
       "Epoch 111, Validation Loss: 22.59\n",
       "Epoch 112, Validation Loss: 21.70\n",
-      "Epoch 113, Validation Loss: 21.94\n"
+      "Epoch 113, Validation Loss: 21.94\n",
+      "Epoch 114, Validation Loss: 21.40\n",
+      "Epoch 115, Validation Loss: 21.87\n",
+      "Epoch 116, Validation Loss: 21.68\n",
+      "Epoch 117, Validation Loss: 22.84\n",
+      "Epoch 118, Validation Loss: 22.31\n",
+      "Epoch 119, Validation Loss: 21.94\n",
+      "Epoch 120, Validation Loss: 21.89\n",
+      "Epoch 121, Validation Loss: 22.71\n",
+      "Early stopping at epoch 121\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 98.12 sec.\n"
      ]
     }
    ],
@@ -979,10 +991,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "188c6d47-2e52-418c-ba52-33fed3701736",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 221.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    64.232553          0.391075      0.000988\n",
+      "std     15.186186          0.606805      0.000559\n",
+      "min     34.560756          0.000000      0.000000\n",
+      "25%     53.647430          0.000000      0.000999\n",
+      "50%     62.802589          0.000000      0.001003\n",
+      "75%     73.050173          0.866991      0.001112\n",
+      "max    117.822355          2.986861      0.002522\n",
+      "Number of infeasible solution: 45\n"
+     ]
+    }
+   ],
    "source": [
     "from src.heuristic import naive_round\n",
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
