--- a/Test Rosenbrock 50-100.ipynb
+++ b/Test Rosenbrock 50-100.ipynb
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "2fb68ab1-eaf8-4821-93ec-65e8c4b0a00c",
    "metadata": {},
    "outputs": [],
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "d01e8d11-e6f5-4e99-8dc4-e173751c927e",
    "metadata": {},
    "outputs": [],
@@ -989,21 +989,21 @@
     "# hyperparameters\n",
     "penalty_weight = 100  # weight of constraint violation penealty\n",
     "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
-    "hsize = 8             # width of hidden layers for solution mapping\n",
+    "hsize = 64            # width of hidden layers for solution mapping\n",
     "lr = 1e-3             # learning rate\n",
     "batch_size = 64       # batch size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "99131f79-d4e9-4bcb-ba80-1d6284cdc5f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# set problem\n",
     "import neuromancer as nm\n",
-    "from src.problem import nmQuadratic\n",
+    "from src.problem import nmRosenbrock\n",
     "from src.func.layer import netFC\n",
     "# build neural architecture for the solution map\n",
     "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks, bias=True,\n",
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "dea5cd27-82b8-433f-bdc2-e539e78cfa36",
    "metadata": {},
    "outputs": [
@@ -1025,116 +1025,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 22826.07\n",
-      "Epoch 1, Validation Loss: 4787.23\n",
-      "Epoch 2, Validation Loss: 3957.99\n",
-      "Epoch 3, Validation Loss: 2811.82\n",
-      "Epoch 4, Validation Loss: 1950.94\n",
-      "Epoch 5, Validation Loss: 1580.42\n",
-      "Epoch 6, Validation Loss: 1082.52\n",
-      "Epoch 7, Validation Loss: 686.13\n",
-      "Epoch 8, Validation Loss: 571.66\n",
-      "Epoch 9, Validation Loss: 506.35\n",
-      "Epoch 10, Validation Loss: 469.25\n",
-      "Epoch 11, Validation Loss: 430.88\n",
-      "Epoch 12, Validation Loss: 391.49\n",
-      "Epoch 13, Validation Loss: 373.73\n",
-      "Epoch 14, Validation Loss: 327.14\n",
-      "Epoch 15, Validation Loss: 311.69\n",
-      "Epoch 16, Validation Loss: 313.02\n",
-      "Epoch 17, Validation Loss: 315.92\n",
-      "Epoch 18, Validation Loss: 314.13\n",
-      "Epoch 19, Validation Loss: 257.17\n",
-      "Epoch 20, Validation Loss: 243.75\n",
-      "Epoch 21, Validation Loss: 238.70\n",
-      "Epoch 22, Validation Loss: 359.91\n",
-      "Epoch 23, Validation Loss: 257.32\n",
-      "Epoch 24, Validation Loss: 259.01\n",
-      "Epoch 25, Validation Loss: 234.18\n",
-      "Epoch 26, Validation Loss: 230.26\n",
-      "Epoch 27, Validation Loss: 226.20\n",
-      "Epoch 28, Validation Loss: 218.98\n",
-      "Epoch 29, Validation Loss: 217.32\n",
-      "Epoch 30, Validation Loss: 226.11\n",
-      "Epoch 31, Validation Loss: 221.25\n",
-      "Epoch 32, Validation Loss: 217.34\n",
-      "Epoch 33, Validation Loss: 228.24\n",
-      "Epoch 34, Validation Loss: 219.75\n",
-      "Epoch 35, Validation Loss: 222.06\n",
-      "Epoch 36, Validation Loss: 215.34\n",
-      "Epoch 37, Validation Loss: 238.85\n",
-      "Epoch 38, Validation Loss: 212.15\n",
-      "Epoch 39, Validation Loss: 215.77\n",
-      "Epoch 40, Validation Loss: 214.94\n",
-      "Epoch 41, Validation Loss: 220.56\n",
-      "Epoch 42, Validation Loss: 211.57\n",
-      "Epoch 43, Validation Loss: 219.49\n",
-      "Epoch 44, Validation Loss: 214.39\n",
-      "Epoch 45, Validation Loss: 214.50\n",
-      "Epoch 46, Validation Loss: 207.71\n",
-      "Epoch 47, Validation Loss: 207.72\n",
-      "Epoch 48, Validation Loss: 220.70\n",
-      "Epoch 49, Validation Loss: 206.90\n",
-      "Epoch 50, Validation Loss: 206.74\n",
-      "Epoch 51, Validation Loss: 206.98\n",
-      "Epoch 52, Validation Loss: 205.30\n",
-      "Epoch 53, Validation Loss: 209.73\n",
-      "Epoch 54, Validation Loss: 204.12\n",
-      "Epoch 55, Validation Loss: 204.60\n",
-      "Epoch 56, Validation Loss: 207.02\n",
-      "Epoch 57, Validation Loss: 203.01\n",
-      "Epoch 58, Validation Loss: 208.10\n",
-      "Epoch 59, Validation Loss: 207.96\n",
-      "Epoch 60, Validation Loss: 216.64\n",
-      "Epoch 61, Validation Loss: 202.89\n",
-      "Epoch 62, Validation Loss: 204.40\n",
-      "Epoch 63, Validation Loss: 204.20\n",
-      "Epoch 64, Validation Loss: 204.23\n",
-      "Epoch 65, Validation Loss: 210.33\n",
-      "Epoch 66, Validation Loss: 236.83\n",
-      "Epoch 67, Validation Loss: 206.75\n",
-      "Epoch 68, Validation Loss: 206.58\n",
-      "Epoch 69, Validation Loss: 203.66\n",
-      "Epoch 70, Validation Loss: 210.39\n",
-      "Epoch 71, Validation Loss: 200.74\n",
-      "Epoch 72, Validation Loss: 205.19\n",
-      "Epoch 73, Validation Loss: 205.51\n",
-      "Epoch 74, Validation Loss: 201.39\n",
-      "Epoch 75, Validation Loss: 203.58\n",
-      "Epoch 76, Validation Loss: 202.17\n",
-      "Epoch 77, Validation Loss: 200.54\n",
-      "Epoch 78, Validation Loss: 200.38\n",
-      "Epoch 79, Validation Loss: 201.10\n",
-      "Epoch 80, Validation Loss: 203.17\n",
-      "Epoch 81, Validation Loss: 221.09\n",
-      "Epoch 82, Validation Loss: 213.31\n",
-      "Epoch 83, Validation Loss: 212.47\n",
-      "Epoch 84, Validation Loss: 199.30\n",
-      "Epoch 85, Validation Loss: 204.16\n",
-      "Epoch 86, Validation Loss: 198.37\n",
-      "Epoch 87, Validation Loss: 199.96\n",
-      "Epoch 88, Validation Loss: 204.24\n",
-      "Epoch 89, Validation Loss: 200.75\n",
-      "Epoch 90, Validation Loss: 203.39\n",
-      "Epoch 91, Validation Loss: 201.03\n",
-      "Epoch 92, Validation Loss: 199.77\n",
-      "Epoch 93, Validation Loss: 201.50\n",
-      "Epoch 94, Validation Loss: 254.99\n",
-      "Epoch 95, Validation Loss: 204.74\n",
-      "Epoch 96, Validation Loss: 198.66\n",
-      "Epoch 97, Validation Loss: 201.97\n",
-      "Epoch 98, Validation Loss: 222.43\n",
-      "Epoch 99, Validation Loss: 202.82\n",
-      "Epoch 100, Validation Loss: 205.64\n",
-      "Epoch 101, Validation Loss: 201.60\n",
-      "Epoch 102, Validation Loss: 201.55\n",
-      "Epoch 103, Validation Loss: 202.72\n",
-      "Epoch 104, Validation Loss: 199.92\n",
-      "Epoch 105, Validation Loss: 202.65\n",
-      "Early stopping at epoch 105\n",
+      "Epoch 0, Validation Loss: 22571.48\n",
+      "Epoch 1, Validation Loss: 2525.01\n",
+      "Epoch 2, Validation Loss: 915.34\n",
+      "Epoch 3, Validation Loss: 575.07\n",
+      "Epoch 4, Validation Loss: 413.19\n",
+      "Epoch 5, Validation Loss: 315.38\n",
+      "Epoch 6, Validation Loss: 338.62\n",
+      "Epoch 7, Validation Loss: 340.80\n",
+      "Epoch 8, Validation Loss: 290.29\n",
+      "Epoch 9, Validation Loss: 314.05\n",
+      "Epoch 10, Validation Loss: 364.39\n",
+      "Epoch 11, Validation Loss: 275.40\n",
+      "Epoch 12, Validation Loss: 260.99\n",
+      "Epoch 13, Validation Loss: 264.58\n",
+      "Epoch 14, Validation Loss: 288.60\n",
+      "Epoch 15, Validation Loss: 281.13\n",
+      "Epoch 16, Validation Loss: 282.78\n",
+      "Epoch 17, Validation Loss: 268.49\n",
+      "Epoch 18, Validation Loss: 244.98\n",
+      "Epoch 19, Validation Loss: 250.20\n",
+      "Epoch 20, Validation Loss: 289.79\n",
+      "Epoch 21, Validation Loss: 246.91\n",
+      "Epoch 22, Validation Loss: 290.32\n",
+      "Epoch 23, Validation Loss: 289.54\n",
+      "Epoch 24, Validation Loss: 271.49\n",
+      "Epoch 25, Validation Loss: 247.32\n",
+      "Epoch 26, Validation Loss: 222.55\n",
+      "Epoch 27, Validation Loss: 225.41\n",
+      "Epoch 28, Validation Loss: 288.51\n",
+      "Epoch 29, Validation Loss: 227.50\n",
+      "Epoch 30, Validation Loss: 271.61\n",
+      "Epoch 31, Validation Loss: 305.42\n",
+      "Epoch 32, Validation Loss: 226.44\n",
+      "Epoch 33, Validation Loss: 232.60\n",
+      "Epoch 34, Validation Loss: 219.50\n",
+      "Epoch 35, Validation Loss: 216.65\n",
+      "Epoch 36, Validation Loss: 210.83\n",
+      "Epoch 37, Validation Loss: 224.39\n",
+      "Epoch 38, Validation Loss: 232.90\n",
+      "Epoch 39, Validation Loss: 218.84\n",
+      "Epoch 40, Validation Loss: 215.38\n",
+      "Epoch 41, Validation Loss: 227.33\n",
+      "Epoch 42, Validation Loss: 213.55\n",
+      "Epoch 43, Validation Loss: 210.17\n",
+      "Epoch 44, Validation Loss: 220.54\n",
+      "Epoch 45, Validation Loss: 216.61\n",
+      "Epoch 46, Validation Loss: 265.54\n",
+      "Epoch 47, Validation Loss: 206.75\n",
+      "Epoch 48, Validation Loss: 216.57\n",
+      "Epoch 49, Validation Loss: 306.79\n",
+      "Epoch 50, Validation Loss: 221.12\n",
+      "Epoch 51, Validation Loss: 206.60\n",
+      "Epoch 52, Validation Loss: 265.92\n",
+      "Epoch 53, Validation Loss: 213.43\n",
+      "Epoch 54, Validation Loss: 204.01\n",
+      "Epoch 55, Validation Loss: 207.50\n",
+      "Epoch 56, Validation Loss: 219.40\n",
+      "Epoch 57, Validation Loss: 230.54\n",
+      "Epoch 58, Validation Loss: 197.51\n",
+      "Epoch 59, Validation Loss: 219.18\n",
+      "Epoch 60, Validation Loss: 202.90\n",
+      "Epoch 61, Validation Loss: 209.37\n",
+      "Epoch 62, Validation Loss: 211.17\n",
+      "Epoch 63, Validation Loss: 212.96\n",
+      "Epoch 64, Validation Loss: 221.46\n",
+      "Epoch 65, Validation Loss: 237.44\n",
+      "Epoch 66, Validation Loss: 204.63\n",
+      "Epoch 67, Validation Loss: 210.84\n",
+      "Epoch 68, Validation Loss: 201.60\n",
+      "Epoch 69, Validation Loss: 217.33\n",
+      "Epoch 70, Validation Loss: 218.14\n",
+      "Epoch 71, Validation Loss: 202.04\n",
+      "Epoch 72, Validation Loss: 236.20\n",
+      "Epoch 73, Validation Loss: 204.76\n",
+      "Epoch 74, Validation Loss: 359.39\n",
+      "Epoch 75, Validation Loss: 218.08\n",
+      "Epoch 76, Validation Loss: 197.29\n",
+      "Epoch 77, Validation Loss: 205.82\n",
+      "Epoch 78, Validation Loss: 209.89\n",
+      "Epoch 79, Validation Loss: 200.91\n",
+      "Epoch 80, Validation Loss: 199.26\n",
+      "Epoch 81, Validation Loss: 201.28\n",
+      "Epoch 82, Validation Loss: 341.47\n",
+      "Epoch 83, Validation Loss: 196.50\n",
+      "Epoch 84, Validation Loss: 236.68\n",
+      "Epoch 85, Validation Loss: 208.28\n",
+      "Epoch 86, Validation Loss: 200.46\n",
+      "Epoch 87, Validation Loss: 200.11\n",
+      "Epoch 88, Validation Loss: 206.61\n",
+      "Epoch 89, Validation Loss: 198.83\n",
+      "Epoch 90, Validation Loss: 212.07\n",
+      "Epoch 91, Validation Loss: 219.21\n",
+      "Epoch 92, Validation Loss: 195.14\n",
+      "Epoch 93, Validation Loss: 209.01\n",
+      "Epoch 94, Validation Loss: 213.36\n",
+      "Epoch 95, Validation Loss: 492.28\n",
+      "Epoch 96, Validation Loss: 205.41\n",
+      "Epoch 97, Validation Loss: 201.42\n",
+      "Epoch 98, Validation Loss: 206.00\n",
+      "Epoch 99, Validation Loss: 197.35\n",
+      "Epoch 100, Validation Loss: 206.64\n",
+      "Epoch 101, Validation Loss: 205.51\n",
+      "Epoch 102, Validation Loss: 226.30\n",
+      "Epoch 103, Validation Loss: 201.37\n",
+      "Epoch 104, Validation Loss: 215.19\n",
+      "Epoch 105, Validation Loss: 205.54\n",
+      "Epoch 106, Validation Loss: 258.78\n",
+      "Epoch 107, Validation Loss: 197.95\n",
+      "Epoch 108, Validation Loss: 201.06\n",
+      "Epoch 109, Validation Loss: 210.14\n",
+      "Epoch 110, Validation Loss: 197.67\n",
+      "Epoch 111, Validation Loss: 198.35\n",
+      "Early stopping at epoch 111\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 92.26 sec.\n"
+      "The training time is 103.38 sec.\n"
      ]
     }
    ],
@@ -1153,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "188c6d47-2e52-418c-ba52-33fed3701736",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:02<00:00, 49.76it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:02<00:00, 42.26it/s]\n"
      ]
     },
     {
@@ -1170,14 +1176,14 @@
      "text": [
       "          Obj Val  Constraints Viol  Elapsed Time\n",
       "count  100.000000        100.000000    100.000000\n",
-      "mean   612.458845          0.967940      0.000832\n",
-      "std     74.493417          1.592367      0.000573\n",
-      "min    493.336173          0.000000      0.000000\n",
-      "25%    561.014801          0.000000      0.000000\n",
-      "50%    595.097801          0.000000      0.001001\n",
-      "75%    656.262879          1.369021      0.001021\n",
-      "max    818.210108          5.569582      0.002402\n",
-      "Number of infeasible solution: 42\n"
+      "mean   616.062211          1.176163      0.000890\n",
+      "std     81.610552          1.486732      0.000521\n",
+      "min    463.108093          0.000000      0.000000\n",
+      "25%    566.122963          0.000000      0.000998\n",
+      "50%    616.914702          0.281389      0.001001\n",
+      "75%    657.642093          2.374390      0.001033\n",
+      "max    858.509379          4.795009      0.002762\n",
+      "Number of infeasible solution: 55\n"
      ]
     }
    ],
